<?xml version="1.0"?>
<package>
  <name>ruckig_control</name>
  <version>0.0.1</version>
  <description>Ruckig controller</description>

  <maintainer email="hi@owentrueblood.com">Owen Trueblood</maintainer>
  <author email="hi@owentrueblood.com">Owen Trueblood</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO: are these all necessary? -->

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <controller_interface plugin="${prefix}/plugins/custom_controller.xml"/>
  </export>
</package>
